--- a/local-playbook.yml
+++ b/local-playbook.yml
@@ -25,3 +25,8 @@
     - community.general.homebrew:
         name: aws-sam-cli
         state: present
+
+- name: Install nvm
+  hosts: localhost
+  roles:
+    - nvm
